Patch from rkubacki: mostly unused imports, few unused fields and an attempt to get rid of statically held bundle